[gd_scene load_steps=7 format=3 uid="uid://1a1ffxx3h8d"]

[ext_resource type="Texture2D" uid="uid://bnuxt0y6tfb67" path="res://Assets/Textures/Keep/Dwarven Hall - Empty.png" id="1_55too"]
[ext_resource type="Script" path="res://Assets/Scripts/KeepInteractions.gd" id="1_pc30g"]
[ext_resource type="Texture2D" uid="uid://crxuts7xaykcg" path="res://Assets/Textures/Keep/King on Throne.png" id="2_1ir85"]
[ext_resource type="Texture2D" uid="uid://d4ijrvuhv6yln" path="res://Assets/Textures/Keep/Smithy Shop Empty.png" id="3_5kp7p"]
[ext_resource type="PackedScene" path="res://Scenes/Game/smithy.tscn" id="4_hp5ci"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71iqc"]
size = Vector2(94, 27)

[node name="DwarvenKeep" type="RigidBody2D"]
z_index = -1
lock_rotation = true
script = ExtResource("1_pc30g")

[node name="Keep" type="Sprite2D" parent="."]
texture = ExtResource("1_55too")

[node name="KingOnThrone" type="Sprite2D" parent="."]
position = Vector2(191, 9)
texture = ExtResource("2_1ir85")

[node name="KingInteractionArea" type="Area2D" parent="KingOnThrone"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KingOnThrone/KingInteractionArea"]
position = Vector2(0, 25.5)
shape = SubResource("RectangleShape2D_71iqc")

[node name="SmithyShopEmpty" type="Sprite2D" parent="."]
position = Vector2(-154, -32)
texture = ExtResource("3_5kp7p")

[node name="Smithy" parent="SmithyShopEmpty" instance=ExtResource("4_hp5ci")]
position = Vector2(5, 64)
collision_layer = 16
collision_mask = 2

[node name="LeftCollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-175.5, 80)
polygon = PackedVector2Array(144.5, -32, 144.5, 32, -144.5, 32, -144.5, -192, 175.5, -192, 175.5, -183, -135.5, -183, -134.5, -32)

[node name="RightCollisionShape2D2" type="CollisionPolygon2D" parent="."]
position = Vector2(-175.5, 80)
polygon = PackedVector2Array(206.5, -32, 206.5, 32, 495.5, 32, 495.5, -192, 175.5, -192, 175.5, -183, 486.5, -183, 485.5, -32)

[connection signal="body_entered" from="KingOnThrone/KingInteractionArea" to="." method="_on_king_interaction_area_body_entered"]
[connection signal="body_exited" from="KingOnThrone/KingInteractionArea" to="." method="_on_king_interaction_area_body_exited"]
[connection signal="body_entered" from="SmithyShopEmpty/Smithy" to="." method="_on_smithy_body_entered"]
[connection signal="body_exited" from="SmithyShopEmpty/Smithy" to="." method="_on_smithy_body_exited"]
